--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Sport-live-score</string>
+    <string name="home">Home</string>
+    <string name="news">News</string>
+    <string name="live_score">Live Score</string>
+    <string name="squads">Squads</string>
 </resources>
